refactor: Update references from Crystal to PersonaFlow across the extension

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -163,7 +163,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Crystal LinkedIn Extractor</h1>
+        <h1>PersonaFlow LinkedIn Extractor</h1>
         <p>Extract profile data for personality analysis</p>
     </div>
 
@@ -198,7 +198,7 @@
                 Extract Profile Data
             </button>
             <button class="btn" id="analyze-btn" disabled>
-                Send to Crystal for Analysis
+                Send to PersonaFlow for Analysis
             </button>
             <button class="btn" id="export-btn" disabled>
                 Export as JSON
@@ -207,7 +207,7 @@
     </div>
 
     <div class="footer">
-        Crystal Knows Clone Extension v1.0
+        PersonaFlow Extension v1.0
     </div>
 
     <script src="popup.js"></script>
